feat: generate swagger documents and implement main function
